fixes applied on-spot